openshift/jenkins-proxy.app.yaml
kind: Template
apiVersion: v1
metadata:
  name: jenkins-proxy
labels:
  template: jenkins-proxy
objects:
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    name: jenkins-proxy
  spec:
    replicas: 3
    selector:
      service: jenkins-proxy
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          service: jenkins-proxy
      spec:
        containers:
        - env:
          - name: JC_IDLER_API_URL
            valueFrom:
              configMapKeyRef:
                name: jenkins-proxy
                key: idler.api.url
          - name: JC_WIT_API_URL
            valueFrom:
              configMapKeyRef:
                name: jenkins-proxy
                key: wit.api.url
          - name: JC_F8TENANT_API_URL
            valueFrom:
              configMapKeyRef:
                name: jenkins-proxy
                key: f8tenant.api.url
          - name: JC_REDIRECT_URL
            valueFrom:
              configMapKeyRef:
                name: jenkins-proxy
                key: redirect.url
          - name: JC_KEYCLOAK_URL
            valueFrom:
              configMapKeyRef:
                name: auth
                key: keycloak.url
          - name: JC_AUTH_URL
            valueFrom:
              configMapKeyRef:
                name: core
                key: auth.serviceurl
          - name: JC_AUTH_TOKEN
            valueFrom:
              secretKeyRef:
                name: jenkins-proxy
                key: proxy.auth.token
          - name: JC_POSTGRES_HOST
            valueFrom:
              secretKeyRef:
                name: jenkins-proxy
                key: postgres.host
          - name: JC_POSTGRES_PORT
            valueFrom:
              secretKeyRef:
                name: jenkins-proxy
                key: postgres.port
          - name: JC_POSTGRES_USER
            valueFrom:
              secretKeyRef:
                name: jenkins-proxy
                key: postgres.user
          - name: JC_POSTGRES_DATABASE
            valueFrom:
              secretKeyRef:
                name: jenkins-proxy
                key: postgres.database
          - name: JC_POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: jenkins-proxy
                key: postgres.password
          - name: JC_LOG_LEVEL
            value: "info"
          - name: JC_DEBUG
            value: "false"
          - name: GODEBUG
            value: ""
          image: ${IMAGE}:${IMAGE_TAG}
          imagePullPolicy: Always
          name: jenkins-proxy
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          readinessProbe:
            httpGet:
              path: /api/info/none
              port: 9091
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/info/none
              port: 9091
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
          resources:
            requests:
              memory: "50Mi"
              cpu: "30m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      service: jenkins-proxy
    name: jenkins-proxy
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 9091-tcp
      port: 9091
      protocol: TCP
      targetPort: 9091
    selector:
      service: jenkins-proxy
    sessionAffinity: None
    type: ClusterIP
parameters:
- name: IMAGE
  value: registry.devshift.net/fabric8-services/fabric8-jenkins-proxy
  required: true
- name: IMAGE_TAG
  value: latest
  required: true
