openshift/jenkins-proxy.route.yaml
kind: Route
apiVersion: v1
metadata:
  name: jenkins-proxy
spec:
  host: ''
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: jenkins-proxy
    weight: 100
  wildcardPolicy: None
